# huginn-net-profiler

./: .dockerignore  .gitignore  Cargo.toml  README.md  ROADMAP.md  deny.toml  docker-compose.yml  traefik.yml
.github/workflows/: audit.yml  ci.yml
deployment/: README.md  deploy.sh  docker-compose.yml  generate-local-certs.sh  ja4_test_database.json  mirror_traffic.sh  nginx.conf  pcap_dump.sh  start.sh  traefik.yml
deployment/dynamic/: local-certs.yml  local.crt  local.key
deployment/huginn-net-profiler/: docker-compose.yml
deployment/traefik_dynamic/: middlewares.yml  tls.yml
huginn-api/: Cargo.toml
huginn-api/examples/: basic_server.rs  basic_server_no_collector.rs
huginn-api/src/: handlers.rs  lib.rs  main.rs  server.rs  state.rs  websocket.rs
huginn-collector/: Cargo.toml
huginn-collector/src/: bridge.rs  collector.rs  config.rs  lib.rs
huginn-core/: Cargo.toml
huginn-core/examples/: analyzer_ja4_integration.rs  ja4_validation.rs
huginn-core/src/: analyzer.rs  events.rs  ja4.rs  lib.rs  profile.rs
profiler/http-collector/: Cargo.toml  Dockerfile
profiler/http-collector/src/: main.rs
profiler/profile-assembler/: Cargo.toml  Dockerfile
profiler/profile-assembler/src/: main.rs
profiler/tcp-collector/: Cargo.toml  Dockerfile
profiler/tcp-collector/src/: main.rs
profiler/tls-collector/: Cargo.toml  Dockerfile
profiler/tls-collector/src/: main.rs
static/: index.html
static/css/: styles.css
static/data/: tls-cipher-suites.json  tls-extensions.json  tls-named-groups.json  tls-signature-algorithms.json
static/js/: api.js  app.js  ui.js
traefik_dynamic/: middlewares.yml  tls.yml
