[workspace]
members = [
    "profiler/tls-collector",
    "profiler/http-collector",
    "profiler/tcp-collector",
    "profiler/profile-assembler",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync", "full"] }
huginn-net-db = "1.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.26", features = ["json"] }
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
tower-http = { version = "0.6.8", features = ["cors"] }
ctrlc = "3.5.1"
