[package]
name = "huginn-api"
version = "0.1.0"
edition = "2021"
description = "Web API server for Huginn network profiler"
license = "MIT"

[dependencies]
huginn-core = { path = "../huginn-core" }
huginn-collector = { path = "../huginn-collector" }
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
arc-swap = "1.6"
futures = "0.3"
tower = "0.4"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[bin]]
name = "huginn-api"
path = "src/main.rs"

[[example]]
name = "basic_server"
path = "examples/basic_server.rs"

[[example]]
name = "basic_server_no_collector"
path = "examples/basic_server_no_collector.rs" 