[package]
name = "huginn-collector"
version = "0.1.0"
edition = "2021"
description = "Network traffic collector for Huginn using huginn-net"
license = "MIT"

[dependencies]
huginn-core = { path = "../huginn-core" }
huginn-net = "1.4.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = { workspace = true } 