[package]
name = "huginn-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Huginn network traffic analysis"
license = "MIT"

[dependencies]
huginn-net = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
tracing-subscriber = { workspace = true } 