[package]
name = "http-collector"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
huginn-net-http = "1.6.1"
huginn-net-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = { workspace = true }
crossbeam-channel = { workspace = true } # TODO: will be deprecated in the new intreface
