[package]
name = "tls-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
huginn-net = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "cargo", "git", "rustc"] } 