[package]
name = "tls-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
huginn-net = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
